[gd_scene load_steps=6 format=3 uid="uid://ig2ib85womvq"]

[ext_resource type="Script" path="res://addons/pronto/helpers/EditorIcon.gd" id="2_2ll7t"]
[ext_resource type="Script" path="res://addons/pronto/signal_connecting/node_to_node_configurator.gd" id="2_fmteu"]
[ext_resource type="PackedScene" uid="uid://1ubsx3vbyfwv" path="res://addons/pronto/signal_connecting/function_name.tscn" id="4_x4sfm"]
[ext_resource type="PackedScene" uid="uid://d1jujxfamsekk" path="res://addons/pronto/signal_connecting/expression_edit.tscn" id="5_ujudk"]

[sub_resource type="Texture2D" id="Texture2D_q6wk4"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_2ll7t")
name = "Remove"

[node name="Node To Node Configurator" type="PanelContainer"]
custom_minimum_size = Vector2(100, 100)
offset_right = 431.0
offset_bottom = 175.0
scale = Vector2(1, 1.00268)
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_type_variation = &"Panel"
script = ExtResource("2_fmteu")
metadata/pronto_ignore = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_constants/separation = 6

[node name="SharedLinksNote" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SharedLinksCount" type="Label" parent="MarginContainer/VBoxContainer/SharedLinksNote"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.811765, 0.658824, 0, 1)
text = "This connection is linked to x other nodes."

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/SharedLinksNote"]
layout_mode = 2
text = "Make unique"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Signal:"

[node name="Signal" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "area_entered"
alignment = 1
expand_to_text_length = true
flat = true

[node name="SignalArgs" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "(area)"

[node name="remove" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("Texture2D_q6wk4")

[node name="Receiver" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ReceiverPath" type="Label" parent="MarginContainer/VBoxContainer/Receiver"]
unique_name_in_owner = true
layout_mode = 2
text = "$../../node_name."

[node name="FunctionName" parent="MarginContainer/VBoxContainer/Receiver" instance=ExtResource("4_x4sfm")]
unique_name_in_owner = true
layout_mode = 2
text = ""
caret_blink = true
caret_blink_interval = 0.5

[node name="LeftParen" type="Label" parent="MarginContainer/VBoxContainer/Receiver"]
layout_mode = 2
text = "("

[node name="Args" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Receiver"]
unique_name_in_owner = true
layout_mode = 2

[node name="RightParen" type="Label" parent="MarginContainer/VBoxContainer/Receiver"]
layout_mode = 2
text = ")"

[node name="Expression" parent="MarginContainer/VBoxContainer" instance=ExtResource("5_ujudk")]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 64)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Statement(s)..."
max_width = 559

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "only if: "

[node name="Condition" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("5_ujudk")]
unique_name_in_owner = true
custom_minimum_size = Vector2(374, 64)
layout_mode = 2
size_flags_horizontal = 2
text = "return true"
max_width = 500

[node name="ButtonList" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="done" type="Button" parent="MarginContainer/VBoxContainer/ButtonList"]
layout_mode = 2
size_flags_horizontal = 0
text = "Connect"

[node name="cancel" type="Button" parent="MarginContainer/VBoxContainer/ButtonList"]
layout_mode = 2
size_flags_horizontal = 0
text = "Cancel"

[connection signal="pressed" from="MarginContainer/VBoxContainer/SharedLinksNote/Button" to="." method="_on_make_unique_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/remove" to="." method="_on_remove_pressed"]
[connection signal="method_selected" from="MarginContainer/VBoxContainer/Receiver/FunctionName" to="." method="_on_function_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonList/done" to="." method="_on_done_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonList/cancel" to="." method="_on_cancel_pressed"]
